--- a/src/components/reviews-full.astro
+++ b/src/components/reviews-full.astro
@@ -19,8 +19,8 @@ import "components/css-components/style-reviews-full.css";
     </div>
   </div>
 
-  <div class="page-reviews__container full-comment-page-reviews__container"
-    id="d3_model">
+  <div  class="page-reviews__container full-comment-page-reviews__container" id="d3_model">
+    <!-- Google -->
 
     <div class="content-page content-page-moreHid">
       <div class="content-a">
@@ -1280,9 +1280,8 @@ import "components/css-components/style-reviews-full.css";
       </div>
     </div>
 
+    <!-- Thumbtack -->
 
-    
-    
     <div class="content-page">
       <div class="content-a">
         <div class="avatar-a">
@@ -2102,7 +2101,10 @@ import "components/css-components/style-reviews-full.css";
           >
         </div>
         <div class="description-b">
-          <p>Excellent work; polite, explained issue thoroughly was fast & cleaned up after job was finished. Thank you!</p>
+          <p>
+            Excellent work; polite, explained issue thoroughly was fast &
+            cleaned up after job was finished. Thank you!
+          </p>
         </div>
         <a class="more"></a>
 
@@ -2240,7 +2242,12 @@ import "components/css-components/style-reviews-full.css";
         </div>
         <div class="description-b">
           <p>
-            We had drainages issue with 3 year old dishwasher. Roman arrived on time and fixed the issue in no time. We used Sears repair diagnostics service but 2 of the guys gave the wrong diagnosis ( first one said there’s no issue, 2nd one said it is draining pump issue and will charge more than $300. We needed 2nd opinion due to dishwasher is only $400. Drain pump wasn’t the issue after all lol
+            We had drainages issue with 3 year old dishwasher. Roman arrived on
+            time and fixed the issue in no time. We used Sears repair
+            diagnostics service but 2 of the guys gave the wrong diagnosis (
+            first one said there’s no issue, 2nd one said it is draining pump
+            issue and will charge more than $300. We needed 2nd opinion due to
+            dishwasher is only $400. Drain pump wasn’t the issue after all lol
           </p>
         </div>
         <a class="more"></a>
@@ -2378,7 +2385,10 @@ import "components/css-components/style-reviews-full.css";
           >
         </div>
         <div class="description-b">
-          <p>Roman was great and went out of his way to help me with my broken dishwasher.</p>
+          <p>
+            Roman was great and went out of his way to help me with my broken
+            dishwasher.
+          </p>
         </div>
         <a class="more"></a>
 
@@ -2516,7 +2526,10 @@ import "components/css-components/style-reviews-full.css";
         </div>
         <div class="description-b">
           <p>
-            This guy was amazing!! He came out three times I order to make sure our machine was working correctly and finally got it working after his fourth and final visit. We worked hard and made sure our washer was back to how it was the day I bought it.
+            This guy was amazing!! He came out three times I order to make sure
+            our machine was working correctly and finally got it working after
+            his fourth and final visit. We worked hard and made sure our washer
+            was back to how it was the day I bought it.
           </p>
         </div>
         <a class="more"></a>
@@ -2655,7 +2668,10 @@ import "components/css-components/style-reviews-full.css";
         </div>
         <div class="description-b">
           <p>
-            Roman is a professional technician. He quickly figured out why my dryer was not working. Explained how to solve the problem with my dryer. He was courteous and polite. The repair cost was also reasonable. I'll call him next time if need be.
+            Roman is a professional technician. He quickly figured out why my
+            dryer was not working. Explained how to solve the problem with my
+            dryer. He was courteous and polite. The repair cost was also
+            reasonable. I'll call him next time if need be.
           </p>
         </div>
         <a class="more"></a>
@@ -2794,7 +2810,9 @@ import "components/css-components/style-reviews-full.css";
         </div>
         <div class="description-b">
           <p>
-            Roman knows microwaves inside and out. I’m very happy with his results. Although I hope I won’t need any repairs in the future, if I do, I’ll definitely hire him again
+            Roman knows microwaves inside and out. I’m very happy with his
+            results. Although I hope I won’t need any repairs in the future, if
+            I do, I’ll definitely hire him again
           </p>
         </div>
         <a class="more"></a>
@@ -2932,8 +2950,7 @@ import "components/css-components/style-reviews-full.css";
           >
         </div>
         <div class="description-b">
-          <p>Roman was on time, did a neat and very clean job.
-          </p>
+          <p>Roman was on time, did a neat and very clean job.</p>
         </div>
         <a class="more"></a>
 
@@ -3071,7 +3088,9 @@ import "components/css-components/style-reviews-full.css";
         </div>
         <div class="description-b">
           <p>
-            Very easy to communicate with, was straight forward about pricing and timeline and gave us a warranty on his work. Would highly recommend.
+            Very easy to communicate with, was straight forward about pricing
+            and timeline and gave us a warranty on his work. Would highly
+            recommend.
           </p>
         </div>
         <a class="more"></a>
@@ -3210,7 +3229,10 @@ import "components/css-components/style-reviews-full.css";
         </div>
         <div class="description-b">
           <p>
-            Roman was professional and punctual - I appreciate how quickly he was able to resolve my issue when others could not. I would certainly reach out to Roman again should there be other projects that need to be done!
+            Roman was professional and punctual - I appreciate how quickly he
+            was able to resolve my issue when others could not. I would
+            certainly reach out to Roman again should there be other projects
+            that need to be done!
           </p>
         </div>
         <a class="more"></a>
@@ -3349,7 +3371,8 @@ import "components/css-components/style-reviews-full.css";
         </div>
         <div class="description-b">
           <p>
-            We had an issue with our microwave sparking - Roman promptly arrived and was able to resolve the issue within 20 minutes. Thanks Roman!
+            We had an issue with our microwave sparking - Roman promptly arrived
+            and was able to resolve the issue within 20 minutes. Thanks Roman!
           </p>
         </div>
         <a class="more"></a>
@@ -3488,7 +3511,10 @@ import "components/css-components/style-reviews-full.css";
         </div>
         <div class="description-b">
           <p>
-            Roman was on time.. examined my oven.. figured out the problem and actually fixed it .. first time I have ever had someone do a repair at the same time as the initial visit. I definitely recommend people use him..works on many different appliances and brands
+            Roman was on time.. examined my oven.. figured out the problem and
+            actually fixed it .. first time I have ever had someone do a repair
+            at the same time as the initial visit. I definitely recommend people
+            use him..works on many different appliances and brands
           </p>
         </div>
         <a class="more"></a>
@@ -3515,7 +3541,6 @@ import "components/css-components/style-reviews-full.css";
         </div>
       </div>
     </div>
-
 
   </div>
 
@@ -4780,7 +4805,7 @@ import "components/css-components/style-reviews-full.css";
     </div>
   </div>
 
-  <div class="page-reviews__container thumbtack-comment-page-reviews__container"
+  <div  class="page-reviews__container thumbtack-comment-page-reviews__container"
     id="graphic_arts">
 
     <div class="content-page">
@@ -5602,7 +5627,10 @@ import "components/css-components/style-reviews-full.css";
           >
         </div>
         <div class="description-b">
-          <p>Excellent work; polite, explained issue thoroughly was fast & cleaned up after job was finished. Thank you!</p>
+          <p>
+            Excellent work; polite, explained issue thoroughly was fast &
+            cleaned up after job was finished. Thank you!
+          </p>
         </div>
         <a class="more"></a>
 
@@ -5740,7 +5768,12 @@ import "components/css-components/style-reviews-full.css";
         </div>
         <div class="description-b">
           <p>
-            We had drainages issue with 3 year old dishwasher. Roman arrived on time and fixed the issue in no time. We used Sears repair diagnostics service but 2 of the guys gave the wrong diagnosis ( first one said there’s no issue, 2nd one said it is draining pump issue and will charge more than $300. We needed 2nd opinion due to dishwasher is only $400. Drain pump wasn’t the issue after all lol
+            We had drainages issue with 3 year old dishwasher. Roman arrived on
+            time and fixed the issue in no time. We used Sears repair
+            diagnostics service but 2 of the guys gave the wrong diagnosis (
+            first one said there’s no issue, 2nd one said it is draining pump
+            issue and will charge more than $300. We needed 2nd opinion due to
+            dishwasher is only $400. Drain pump wasn’t the issue after all lol
           </p>
         </div>
         <a class="more"></a>
@@ -5878,7 +5911,10 @@ import "components/css-components/style-reviews-full.css";
           >
         </div>
         <div class="description-b">
-          <p>Roman was great and went out of his way to help me with my broken dishwasher.</p>
+          <p>
+            Roman was great and went out of his way to help me with my broken
+            dishwasher.
+          </p>
         </div>
         <a class="more"></a>
 
@@ -6016,7 +6052,10 @@ import "components/css-components/style-reviews-full.css";
         </div>
         <div class="description-b">
           <p>
-            This guy was amazing!! He came out three times I order to make sure our machine was working correctly and finally got it working after his fourth and final visit. We worked hard and made sure our washer was back to how it was the day I bought it.
+            This guy was amazing!! He came out three times I order to make sure
+            our machine was working correctly and finally got it working after
+            his fourth and final visit. We worked hard and made sure our washer
+            was back to how it was the day I bought it.
           </p>
         </div>
         <a class="more"></a>
@@ -6155,7 +6194,10 @@ import "components/css-components/style-reviews-full.css";
         </div>
         <div class="description-b">
           <p>
-            Roman is a professional technician. He quickly figured out why my dryer was not working. Explained how to solve the problem with my dryer. He was courteous and polite. The repair cost was also reasonable. I'll call him next time if need be.
+            Roman is a professional technician. He quickly figured out why my
+            dryer was not working. Explained how to solve the problem with my
+            dryer. He was courteous and polite. The repair cost was also
+            reasonable. I'll call him next time if need be.
           </p>
         </div>
         <a class="more"></a>
@@ -6294,7 +6336,9 @@ import "components/css-components/style-reviews-full.css";
         </div>
         <div class="description-b">
           <p>
-            Roman knows microwaves inside and out. I’m very happy with his results. Although I hope I won’t need any repairs in the future, if I do, I’ll definitely hire him again
+            Roman knows microwaves inside and out. I’m very happy with his
+            results. Although I hope I won’t need any repairs in the future, if
+            I do, I’ll definitely hire him again
           </p>
         </div>
         <a class="more"></a>
@@ -6432,8 +6476,7 @@ import "components/css-components/style-reviews-full.css";
           >
         </div>
         <div class="description-b">
-          <p>Roman was on time, did a neat and very clean job.
-          </p>
+          <p>Roman was on time, did a neat and very clean job.</p>
         </div>
         <a class="more"></a>
 
@@ -6571,7 +6614,9 @@ import "components/css-components/style-reviews-full.css";
         </div>
         <div class="description-b">
           <p>
-            Very easy to communicate with, was straight forward about pricing and timeline and gave us a warranty on his work. Would highly recommend.
+            Very easy to communicate with, was straight forward about pricing
+            and timeline and gave us a warranty on his work. Would highly
+            recommend.
           </p>
         </div>
         <a class="more"></a>
@@ -6710,7 +6755,10 @@ import "components/css-components/style-reviews-full.css";
         </div>
         <div class="description-b">
           <p>
-            Roman was professional and punctual - I appreciate how quickly he was able to resolve my issue when others could not. I would certainly reach out to Roman again should there be other projects that need to be done!
+            Roman was professional and punctual - I appreciate how quickly he
+            was able to resolve my issue when others could not. I would
+            certainly reach out to Roman again should there be other projects
+            that need to be done!
           </p>
         </div>
         <a class="more"></a>
@@ -6849,7 +6897,8 @@ import "components/css-components/style-reviews-full.css";
         </div>
         <div class="description-b">
           <p>
-            We had an issue with our microwave sparking - Roman promptly arrived and was able to resolve the issue within 20 minutes. Thanks Roman!
+            We had an issue with our microwave sparking - Roman promptly arrived
+            and was able to resolve the issue within 20 minutes. Thanks Roman!
           </p>
         </div>
         <a class="more"></a>
@@ -6988,7 +7037,10 @@ import "components/css-components/style-reviews-full.css";
         </div>
         <div class="description-b">
           <p>
-            Roman was on time.. examined my oven.. figured out the problem and actually fixed it .. first time I have ever had someone do a repair at the same time as the initial visit. I definitely recommend people use him..works on many different appliances and brands
+            Roman was on time.. examined my oven.. figured out the problem and
+            actually fixed it .. first time I have ever had someone do a repair
+            at the same time as the initial visit. I definitely recommend people
+            use him..works on many different appliances and brands
           </p>
         </div>
         <a class="more"></a>
@@ -7020,17 +7072,9 @@ import "components/css-components/style-reviews-full.css";
 
 
 
-
-
 </div>
 
-
-
-
-
-
-
-  <!-- 
+<!-- 
 <div class="any_task_content">
 
   <div class="any_task_cont_selection">
@@ -7313,50 +7357,49 @@ import "components/css-components/style-reviews-full.css";
 
 </div> -->
 
-  <script defer>
-    document.addEventListener("DOMContentLoaded", function () {
-      const d3model = document.getElementById("d3_model");
-      const videoediting = document.getElementById("video_editing");
-      const graphicarts = document.getElementById("graphic_arts");
+<script defer>
+  document.addEventListener("DOMContentLoaded", function () {
+    const d3model = document.getElementById("d3_model");
+    const videoediting = document.getElementById("video_editing");
+    const graphicarts = document.getElementById("graphic_arts");
 
-      document.querySelector(".sel_3d").addEventListener("click", () => {
-        showElement(d3model);
-        $(".any_task_cont_selection div").removeClass("sel_still");
-        $(".sel_3d").toggleClass("sel_still");
-      });
-      document.querySelector(".sel_vid").addEventListener("click", () => {
-        showElement(videoediting);
-        $(".any_task_cont_selection div").removeClass("sel_still");
-        $(".sel_vid").toggleClass("sel_still");
-      });
-      document.querySelector(".sel_graph").addEventListener("click", () => {
-        showElement(graphicarts);
-        $(".any_task_cont_selection div").removeClass("sel_still");
-        $(".sel_graph").toggleClass("sel_still");
-      });
-
-      function showElement(elementToShow) {
-        if (elementToShow !== d3model) {
-          d3model.style.display = "none";
-        }
-        if (elementToShow !== videoediting) {
-          videoediting.style.display = "none";
-        }
-        if (elementToShow !== graphicarts) {
-          graphicarts.style.display = "none";
-        }
-
-        elementToShow.style.display = "grid";
-      }
+    document.querySelector(".sel_3d").addEventListener("click", () => {
+      showElement(d3model);
+      $(".any_task_cont_selection div").removeClass("sel_still");
+      $(".sel_3d").toggleClass("sel_still");
     });
-  </script>
+    document.querySelector(".sel_vid").addEventListener("click", () => {
+      showElement(videoediting);
+      $(".any_task_cont_selection div").removeClass("sel_still");
+      $(".sel_vid").toggleClass("sel_still");
+    });
+    document.querySelector(".sel_graph").addEventListener("click", () => {
+      showElement(graphicarts);
+      $(".any_task_cont_selection div").removeClass("sel_still");
+      $(".sel_graph").toggleClass("sel_still");
+    });
 
-  <script defer>
-    let more = document.querySelectorAll(".more");
-    for (let i = 0; i < more.length; i++) {
-      more[i].addEventListener("click", function () {
-        more[i].parentNode.classList.toggle("comment-active");
-      });
+    function showElement(elementToShow) {
+      if (elementToShow !== d3model) {
+        d3model.style.display = "none";
+      }
+      if (elementToShow !== videoediting) {
+        videoediting.style.display = "none";
+      }
+      if (elementToShow !== graphicarts) {
+        graphicarts.style.display = "none";
+      }
+
+      elementToShow.style.display = "grid";
     }
-  </script>
+  });
+</script>
 
+<script defer>
+  let more = document.querySelectorAll(".more");
+  for (let i = 0; i < more.length; i++) {
+    more[i].addEventListener("click", function () {
+      more[i].parentNode.classList.toggle("comment-active");
+    });
+  }
+</script>
