--- a/src/pages/services/induction-cooktop-repair.astro
+++ b/src/pages/services/induction-cooktop-repair.astro
@@ -13,6 +13,7 @@ import LogoBrands from "@components/js/logo-brands.astro";
 
 
 
+// import ReviewsFull from "@components/reviews-full.astro";
 import ReviewsFull from "@components/reviews-full.astro";
 ---
 
