--- a/src/pages/services/induction-cooktop-repair.astro
+++ b/src/pages/services/induction-cooktop-repair.astro
@@ -11,15 +11,12 @@ import Focus from "@components/js/focus-menu.astro";
 import Faqs from "@components/js/faqs.astro";
 import LogoBrands from "@components/js/logo-brands.astro";
 
-
-
-// import ReviewsFull from "@components/reviews-full.astro";
 import ReviewsFull from "@components/reviews-full.astro";
 ---
 
 <Navbar />
 <Reviews />
-<Layout title="Walk-in Cooler Repair">
+<Layout title="Induction Cooktop Repair">
   <Container></Container>
 
 <h1>Induction Cooktop Repair</h1>
