--- a/src/components/css-components/style-reviews-full.css
+++ b/src/components/css-components/style-reviews-full.css
@@ -11,14 +11,67 @@
 
 
 .page-reviews {
-  width: 80%;
-  margin: 20px 10%;
+  max-width: 1220px;
+  width: 100%;
+  padding: 20px 10px;
+  margin: auto auto;
 }
+
+
+
+
+
+.reviews-head {
+  width: 100%;
+  background-color: rgb(248, 248, 248);
+  border-radius: 34px;
+  margin-bottom: 20px;
+  padding: 8px 8px;
+}
+
+.sel_vid,
+.sel_graph,
+.sel_3d {
+padding: 3px 8px;
+margin: 5px 5px;
+  border-radius: 15px;
+  transition: all 0.25s ease-out;
+}
+
+.sel_vid:hover,
+.sel_graph:hover,
+.sel_3d:hover {
+  background-color: #e1e1e1;
+}
+
+.sel_vid,
+.sel_graph {
+  display: flex;
+}
+
+
+.sel_vid svg,
+.sel_graph svg {
+  width: 30px;
+  height: 26px;
+}
+
+
+
+
+
+
+
+
+
+
+
 
 
 .page-reviews__container {
   width: 100%;
   display: grid;
+  margin-bottom: 34px;
 }
 
 .full-content-page-reviews {
@@ -43,6 +96,7 @@
   background-color: rgb(248, 248, 248);
   box-shadow: 0 0 0.5px 1px #87878730;
   border-radius: 34px;
+  justify-self: center;
 }
 
 
@@ -148,8 +202,8 @@
   margin: 0;
 }
 
-.content-page-moreHid .more{
-display: none;
+.content-page-moreHid .more {
+  display: none;
 }
 
 .more {
@@ -157,7 +211,7 @@ display: none;
   cursor: pointer;
 }
 
-.more:hover  {
+.more:hover {
   text-decoration: underline !important;
 }
 
@@ -208,52 +262,18 @@ display: none;
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 .any_task_cont_selection {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  text-align: center;
-  padding: 2%;
-  max-width: 700px;
-  justify-self: center;
+  display: inline-flex;
 }
 
 .any_task_cont_selection h5 {
   font-size: 1rem;
-  transform: scale(1, 1.2);
 }
 
 .sel_3d h5,
 .sel_vid h5,
 .sel_graph h5 {
-  color: #454545;
+  color: #000000;
   cursor: pointer;
 }
 
@@ -263,9 +283,6 @@ display: none;
   color: #000;
   transition: color 0.3s ease;
 }
-
-
-
 
 #video_editing {
   display: none;
@@ -277,47 +294,121 @@ display: none;
 
 
 
-
-
-
-
-
-
-
-.sel_still{
-  color: #000000;
-  text-shadow: 0.4px 0.4px 0.4px #000;
-  transition: color 0.3s ease;
-}
-
-.sel_still:hover {
-  color: #ca0913;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 .content-page {
   display: none;
 }
+
 .content-page.visibleLoadMore {
   display: block;
 }
+
+
+
+.sel_still {
+  color: #000000;
+}
+
+.sel_still {
+  position: relative;
+}
+
+.sel_still::after {
+  content: '';
+  position: absolute;
+  bottom: -13px;
+  left: 12px;
+  width: calc(96% - 13px);
+  border-bottom: 3px solid black;
+  border-radius: 2px;
+}
+
+.sel_3d.sel_still::after {
+  width: calc(96% - 11px);
+  left: 9px;
+}
+
+.sel_graph.sel_still::after {
+  width: calc(96% - 8px);
+  left: 12px;
+}
+
+
+
 .load-more {
+  max-width: 200px;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(248, 248, 248);
   margin-top: 20px;
+  border-radius: 5px;
+  justify-self: center;
+  font-weight: 600;
+  box-shadow: 0 0 0.5px 0.5px #87878730;
+  transition: all 0.25s ease-in-out;
+}
+
+
+.load-more:hover {
+  background-color: #e1e1e1;
 }
 
 
 
 
+
+
+
+
+
+
+@media (max-width: 1221px) {
+  .page-reviews {
+    max-width: 930px;
+  }
+}
+
+@media (max-width: 918px) {
+  .page-reviews {
+    max-width: 610px;
+  }
+}
+
+@media (max-width: 603px) {
+  .full-content-page-reviews {
+    grid-template-columns: auto;
+  }
+
+  .content-page {
+    max-width: 100%;
+  }
+}
+
+@media (max-width: 500px) {
+  .sel_vid, .sel_graph, .sel_3d {
+    display: grid;
+    text-align: center;
+  }
+  .sel_vid svg, .sel_graph svg {
+    justify-self: center;
+}
+.sel_still::after {
+  content: '';
+  position: absolute;
+  bottom: -13px;
+  left: 8%;
+  width: calc(92% - 8%);
+  border-bottom: 3px solid black;
+  border-radius: 2px;
+}
+.sel_3d.sel_still::after {
+  left: 8%;
+  width: calc(92% - 8%);
+}
+
+.sel_graph.sel_still::after {
+  left: 8%;
+  width: calc(92% - 8%);
+}
+
+
+}
