--- a/src/components/reviews-full.astro
+++ b/src/components/reviews-full.astro
@@ -11,9 +11,13 @@ import "components/css-components/style-reviews-full.css";
         <h5>All Reviews <b>4.9</b></h5>
       </div>
       <div class="sel_vid">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="injected-svg" data-src="https://static.elfsight.com/icons/app-all-in-one-reviews-icons-google-multicolor.svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path fill="#2A84FC" d="M21.579 12.234c0-.677-.055-1.359-.172-2.025h-9.403v3.839h5.384a4.615 4.615 0 0 1-1.992 3.029v2.49h3.212c1.886-1.736 2.97-4.3 2.97-7.333Z"></path><path fill="#00AC47" d="M12.004 21.974c2.688 0 4.956-.882 6.608-2.406l-3.213-2.491c-.893.608-2.047.952-3.392.952-2.6 0-4.806-1.754-5.597-4.113H3.095v2.567a9.97 9.97 0 0 0 8.909 5.491Z"></path><path fill="#FFBA00" d="M6.407 13.916a5.971 5.971 0 0 1 0-3.817V7.531H3.095a9.977 9.977 0 0 0 0 8.953l3.312-2.568Z"></path><path fill="#FC2C25" d="M12.004 5.982a5.417 5.417 0 0 1 3.824 1.494l2.846-2.846a9.581 9.581 0 0 0-6.67-2.593A9.967 9.967 0 0 0 3.095 7.53l3.312 2.57c.787-2.363 2.996-4.117 5.597-4.117Z"></path>
+        </svg>
         <h5>Google <b>5.0</b></h5>
       </div>
       <div class="sel_graph">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 25" class="injected-svg" data-src="https://static.elfsight.com/icons/app-all-in-one-reviews-icons-thumbtack-multicolor.svg" xmlns:xlink="http://www.w3.org/1999/xlink"><circle cx="12" cy="12.5" r="10" fill="#009FD9"></circle><path fill="#fff" d="M12.606 10.43v4.877c0 .842-.22 1.667-.642 2.386l-.456.807-.455-.807a4.712 4.712 0 0 1-.642-2.386v-3.842c.54-.755 1.35-1.035 2.195-1.035ZM16 7.5v2.07H7V7.5h9Z"></path>
+        </svg>
         <h5>Thumbtack <b>4.9</b></h5>
       </div>
     </div>
@@ -3548,7 +3552,7 @@ import "components/css-components/style-reviews-full.css";
   </div>
 
 
-<button class="load-more" id="load-more-d3_model">Load More</button>
+    <button class="load-more" id="load-more-d3_model">Load More</button>
   </div>
 
 
@@ -7199,3 +7203,4 @@ document.addEventListener('DOMContentLoaded', function() {
     });
   }
 </script>
+
