--- a/src/components/reviews-full.astro
+++ b/src/components/reviews-full.astro
@@ -1,4 +1,8 @@
 ---
+import GoogleReviews from "@components/reviews-google.astro";
+import ThumbtackReviews from "@components/reviews-thumbtack.astro";
+
+
 import "components/css-components/style-reviews-full.css";
 ---
 
@@ -15431,8 +15435,6 @@ import "components/css-components/style-reviews-full.css";
         </div>
       </div>
     </div>
-
-
 
   </div>
 
